# torimies-rs

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  reset_db.sh  rustfmt.toml  sqlx_migrate.sh
.github/: CODEOWNERS
.github/workflows/: deploy.yml
docs/: tori-apispec.md
migrations/: 20211112185056_initial_migration.sql
migrations/2021-12-17-203524_vahti_and_blacklist_ids/: down.sql  up.sql
migrations/2021-12-28-153855_add_site_id/: down.sql  up.sql
migrations/20211112185056_initial_migration/: down.sql  up.sql
migrations/20211215123733_vahti_blacklist/: down.sql  up.sql
migrations/2023-03-02-121436_add_delivery_method/: down.sql  up.sql
src/: blacklist.rs  database.rs  error.rs  extensions.rs  interaction.rs  itemhistory.rs  main.rs  models.rs  notifications.rs  owner.rs  schema.rs  vahti.rs
src/command/: mod.rs  telegram.rs
src/command/discord/: extensions.rs  interaction.rs  mod.rs  poistaesto.rs  poistavahti.rs  vahti.rs
src/command/telegram/: help.rs  mod.rs  poistavahti.rs  start.rs  vahti.rs
src/delivery/: discord.rs  mod.rs  telegram.rs
src/discord/commands/: mod.rs  poistaesto.rs  poistavahti.rs  vahti.rs
src/huutonet/: api.rs  mod.rs  models.rs  parse.rs  seller.rs  vahti.rs
src/tests/: mod.rs
src/tests/huutonet/: api_url.rs  mod.rs  parse.rs
src/tests/tori/: api_url.rs  mod.rs  parse.rs
src/tori/: api.rs  mod.rs  models.rs  parse.rs  seller.rs  vahti.rs
testdata/huutonet/: basic_parse.json  parse_after.json  parse_multiple.json
testdata/tori/: basic_parse.json  parse_after.json  parse_multiple.json
utils/: vahti_generator.hs
