[package]
name = "torimies-rs"
version = "0.1.5"
edition = "2021"
authors = ["Luukas Pörtfors <lajp@iki.fi>"]

[features]
default = ["discord", "tori", "huutonet"]
discord = ["discord-delivery", "discord-command"]
discord-delivery = []
discord-command = []
tori = []
huutonet = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.serenity]
version = "0.11"
default-features = false
features = ["client", "gateway", "rustls_backend", "model"]

[dependencies.tokio]
version = "1.13"
features = ["macros", "rt-multi-thread", "signal"]

[dependencies.diesel]
version = "1.4.8"
features = ["sqlite", "r2d2"]

[dependencies.openssl]
version = "0.10"
features = ["vendored"]

[dependencies.libsqlite3-sys]
version = "0.22.2"
features = ["bundled"]

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

reqwest = "0.11"
regex = "1.5"
dotenv = "0.15"
futures = "0.3"
chrono = "0.4"
clokwerk = "0.3"
serde_json = "1.0"
serde = "1.0"
lazy_static = "1.4"
async-trait = "0.1"
thiserror = "1"
dashmap = "5.4.0"
itertools = "0.10.5"
